minor change to carousel links and job index page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,7 +23,7 @@
       <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/cbs2015.jpg">
       <div class="container">
         <div class="carousel-caption">
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Read More</a></p>
+          <p><a class="btn btn-lg btn-primary" href="/posts/4" role="button">Read More</a></p>
         </div>
       </div>
     </div>
@@ -31,7 +31,7 @@
       <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/WBC2016.jpg">
       <div class="container">
         <div class="carousel-caption">
-          <p><a class="btn btn-lg btn-primary" href="wbc2016.org" role="button">Read More</a></p>
+          <p><a class="btn btn-lg btn-primary" href="/posts/5" role="button">Read More</a></p>
         </div>
       </div>
     </div>
