--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,10 +1,8 @@
-<p id="notice"><%= notice %></p>
-
 <div class="row">
   <div class="col-sm-8 blog-main">
     <div class="blog-header">
       <h1 class="blog-title">Mentorships</h1>
-      <p class="lead blog-description">Description about jobs</p>
+      <!-- <p class="lead blog-description">Description about jobs</p> -->
     </div>
 
     <%= will_paginate @jobs %>
