--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
   <div class="col-sm-8 blog-main">
     <div class="blog-header">
       <h1 class="blog-title">Abbiomat Blog</h1>
-      <p class="lead blog-description">Some kind of description about the blog</p>
+      <!-- <p class="lead blog-description">Some kind of description about the blog</p> -->
     </div>
 
     <%= will_paginate @posts %>
