--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-sm-8 blog-main">
     <div class="blog-header">
-      <h1 class="blog-title">Abbiomat Blog</h1>
+      <h1 class="blog-title">News</h1>
       <!-- <p class="lead blog-description">Some kind of description about the blog</p> -->
     </div>
 
