--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,20 +60,21 @@ form {
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 100px;
-    background-color: #55863C;
+    background-color: #276131;
     h3 {
         float: left;
         margin: 0px;
         padding-top: 15px;
-        color: #333333;
+        color: #64a555;
     }
 
     ul {
         list-style: none;
+        text-align: center;
     }
 
     .fa {
-        color: #333333;
+        color: #64a555;
     }
 
     a:hover {
