--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,3 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.deleteButton {
+    display:block;
+    position:absolute;
+    top:-10px;
+    right:5px;
+    input {
+        width: 20px;
+        height: 20px;
+    }
+}
