--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,29 @@
-<h2>Forgot your password?</h2>
+<div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+  <div class="panel panel-info" >
+    <div class="panel-heading">
+      <div class="panel-title">Reset Password</div>
+    </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+    <div style="padding-top:30px" class="panel-body" >
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+      <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+
+      <%= form_for(resource, as: resource_name, url: user_password_path, html: { method: :post, id: "loginform", class: "form-horizontal", role: "form" }) do |f| %>
+        <%= content_tag(:div, flash[:error], :id => "flash_error") if flash[:error] %>
+        <%= devise_error_messages! %>
+
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="fa fa-user"></i></span>
+          <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "Enter your email address" %>
+        </div>
+
+        <div style="margin-top:10px" class="form-group">
+          <div class="col-sm-12 controls">
+            <%= f.submit "Send reset instructions", class: "btn btn-success" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
+</div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
