--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/" style="padding:0px 10px 0px 10px"><%= image_tag "cbs_logo.png", :style => "height: 50px" %></a>
+        <a class="navbar-brand" href="/" style="padding:0px 10px 0px 10px"><%= image_tag "logo.png", :style => "height: 50px" %></a>
         <a class="navbar-brand" href="/" style="padding:5px 10px 5px 10px">Canadian Biomaterials Society<br>Alberta Student Chapter</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
