Small Changes to pages and appearance
- added twitter
- add post date
- change appearance on events index page

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-8 blog-main">
     <div class="blog-header">
       <h1 class="blog-title">Mentorships</h1>
-      <!-- <p class="lead blog-description">Description about jobs</p> -->
+      <p class="lead blog-description">This section is under development.</p>
     </div>
 
     <%= will_paginate @jobs %>
