--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,6 +4,7 @@
       <ul>
         <li><a href="https://www.facebook.com/groups/CBS.ASC/" target="_blank"><i class="fa fa-facebook-square fa-4x"></i></a></li>
         <li><a href="https://www.linkedin.com/groups/Canadian-Biomaterials-Society-Alberta-Student-6713373" target="_blank"><i class="fa fa-linkedin-square fa-4x"></i></a></li>
+        <li><a href="https://twitter.com/cbs_asc" target="_blank"><i class="fa fa-twitter-square fa-4x"></i></a></li>
       </ul>
     </div>
   </div>
