--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="<%= 'active' if current_page?('/') %>"><%= link_to "Home", root_path %></li>
           <li class="<%= 'active' if current_page?('/about') %>"><%= link_to "About", about_path %></li>
-          <li class="<%= 'active' if current_page?(posts_path) %>"><%= link_to "News", posts_path %></li>
+          <li class="<%= 'active' if current_page?(posts_path) %>"><%= link_to "Events", posts_path %></li>
           <li class="<%= 'active' if current_page?(jobs_path) %>"><%= link_to "Mentorships", jobs_path %></li>
           <li class="<%= 'active' if current_page?('/resources') %>"><%= link_to "Resources", resources_path %></li>
           <li class="<%= 'active' if current_page?(new_contact_path) %>"><%= link_to "Contact", new_contact_path %></li>
