--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :post_date %><br>
+    <%= date_select("post", "post_date", {start_year: Date.today.year, prompt: { day: 'day', month: 'month', year: 'year' }}, {class: "btn btn-default"}) %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :body %><br>
     <%= f.text_area :body, rows: "20", class: 'form-control' %>
   </div>
