--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
         <% end %>
       </small>
     </h2>
-    <p class="blog-post-meta"><%= @post.created_at.strftime("%B %d, %Y") %></p>
+    <p class="blog-post-meta"><%= @post.post_date.strftime("%B %d, %Y") %></p>
     <%= markdown(@post.body) %>
   </div>
 </div>
