--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -14,6 +14,7 @@
         <% end %>
       </small>
     </h1>
+    <p><%= @static_page.description %></p>
     <%= markdown(@static_page.body) %>
   </div>
 </div>
