--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :visible %><br>
+    <%= f.check_box :visible %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :body %><br>
     <%= f.text_area :body, rows: "20", class: 'form-control' %>
   </div>
